# QuickCalc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: lang.ebnf
include/: ast.hpp  concepts.hpp  executor.hpp  lexer.hpp  parser.hpp
src/: ast.cpp  concepts.cpp  executor.cpp  lexer.cpp  main.cpp  parser.cpp
test/: executor.cpp  executorstate.cpp  integration.cpp  lexer.cpp  parser.cpp
